--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>津脉智坊 - 津门老字号共创平台</title>
+    <!-- PWA 相关配置 -->
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="津门老字号共创平台，传承与创新的桥梁" />
+    <link rel="manifest" href="/manifest.json" />
+    <!-- iOS 支持 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="津脉智坊" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <!-- 优化 Font Awesome 加载策略 -->
     <link
       rel="stylesheet"
