修复PWA配置和构建优化

--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <!-- PWA 相关配置 -->
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="津门老字号共创平台，传承与创新的桥梁" />
-    <link rel="manifest" href="/manifest.json" />
-    <!-- iOS 支持 -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="津脉智坊" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <!-- 优化 Font Awesome 加载策略 -->
     <link
       rel="stylesheet"
