fix: resolve CORS issues with trae-api and manifest errors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>津脉智坊 - 津门老字号共创平台</title>
-    <!-- PWA 相关配置 -->
+    <!-- 页面描述 -->
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="津门老字号共创平台，传承与创新的桥梁" />
-    <link rel="manifest" href="/manifest.webmanifest" />
     <!-- 优化 Font Awesome 加载策略 -->
     <link
       rel="stylesheet"
