--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     
     <!-- PWA 相关配置 -->
     <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/icons/icon-192x192.svg" type="image/svg+xml" />
+    <!-- 图标配置 -->
+    <link rel="icon" href="/icons/icon-192x192.svg" type="image/svg+xml" sizes="192x192" />
+    <link rel="icon" href="/icons/icon-512x512.svg" type="image/svg+xml" sizes="512x512" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.svg" />
+    <!-- 兼容旧浏览器 -->
+    <link rel="shortcut icon" href="/icons/icon-192x192.svg" type="image/svg+xml" />
     
     <!-- iOS 相关配置 -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
