Fix ParticleArt page: add error handling and improve Font Awesome loading

--- a/index.html
+++ b/index.html
@@ -22,22 +22,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="津脉智坊" />
     
-    <!-- 优化 Font Awesome 加载策略 -->
+    <!-- Font Awesome 图标库 -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       crossorigin="anonymous"
-      media="print"
-      onload="this.media='all'"
+      media="all"
+      integrity="sha512-ndu6x4aQvXh3M3sAqYp7Lc2Fz+e5u8rL5T0B3Q40m5qf0+24hTzKz9D5Qw0g5a9aR2VnVp9lLwL1e1Q1Mf2qJ3nLm9L2a5L9zXp8L+6T+2qK7+35Q"
+      referrerpolicy="no-referrer"
     />
-    <!-- 添加回退机制 -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        crossorigin="anonymous"
-      />
-    </noscript>
   </head>
   <body>
     <div id="root"></div>
