--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="津脉智坊" />
+    <!-- Vercel 分析配置 -->
+    <meta name="analytics-web-vitals" content="yes" />
   </head>
   <body>
     <div id="root"></div>
