修复meta标签配置

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <meta name="apple-mobile-web-app-title" content="津脉智坊" />
     <!-- Vercel 分析配置 -->
     <meta name="analytics-web-vitals" content="yes" />
+    <!-- 修复mobile-web-app-capable配置 -->
+    <meta name="mobile-web-app-capable" content="yes" />
   </head>
   <body>
     <div id="root"></div>
