修复静态资源引用路径，将绝对路径改为相对路径，解决Vercel部署后首页打不开的问题

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin />
     
     <!-- PWA 相关配置 -->
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <!-- 图标配置 -->
-    <link rel="icon" href="/icons/icon-192x192.svg" type="image/svg+xml" sizes="192x192" />
-    <link rel="icon" href="/icons/icon-512x512.svg" type="image/svg+xml" sizes="512x512" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.svg" />
+    <link rel="icon" href="./icons/icon-192x192.svg" type="image/svg+xml" sizes="192x192" />
+    <link rel="icon" href="./icons/icon-512x512.svg" type="image/svg+xml" sizes="512x512" />
+    <link rel="apple-touch-icon" href="./icons/icon-192x192.svg" />
     <!-- 兼容旧浏览器 -->
-    <link rel="shortcut icon" href="/icons/icon-192x192.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="./icons/icon-192x192.svg" type="image/svg+xml" />
     
     <!-- iOS 相关配置 -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
