--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- 内容安全策略，阻止未知请求 -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https://trae-api-sg.mchost.guru https://via.placeholder.com https://images.unsplash.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' https://trae-api-sg.mchost.guru https://api.moonshot.cn https://api.deepseek.com https://api.doubao.com https://aip.baidubce.com https://dashscope.aliyuncs.com https://api.openai.com https://generativelanguage.googleapis.com https://api.x.ai https://open.bigmodel.cn; frame-src 'self'; media-src 'self'; object-src 'self'; worker-src 'self';" />
+    <!-- 内容安全策略，允许必要资源加载 -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://trae-api-sg.mchost.guru; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https://trae-api-sg.mchost.guru https://via.placeholder.com https://images.unsplash.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' https://trae-api-sg.mchost.guru https://api.moonshot.cn https://api.deepseek.com https://api.doubao.com https://aip.baidubce.com https://dashscope.aliyuncs.com https://api.openai.com https://generativelanguage.googleapis.com https://api.x.ai https://open.bigmodel.cn; frame-src 'self'; media-src 'self'; object-src 'self'; worker-src 'self';" />
     <title>津脉智坊 - 津门老字号共创平台</title>
     <!-- 页面描述 -->
     <meta name="theme-color" content="#2563eb" />
