--- a/public/landing.html
+++ b/public/landing.html
@@ -247,13 +247,21 @@
                 为老字号品牌注入新生，构建非遗文化的赛博新纪元。
             </p>
             <div class="mt-10 flex flex-col sm:flex-row gap-4 justify-center items-center">
-                <a href="/" class="relative px-8 py-4 bg-accent text-black font-bold rounded-full overflow-hidden group transition-all hover:shadow-[0_0_40px_rgba(0,240,255,0.4)] cursor-pointer inline-block focus:outline-none focus:ring-2 focus:ring-accent focus:ring-offset-2 focus:ring-offset-black smooth-scroll">
+                <button onclick="handleExploreClick()" class="relative px-8 py-4 bg-accent text-black font-bold rounded-full overflow-hidden group transition-all hover:shadow-[0_0_40px_rgba(0,240,255,0.4)] cursor-pointer inline-block focus:outline-none focus:ring-2 focus:ring-accent focus:ring-offset-2 focus:ring-offset-black smooth-scroll">
                     <span class="relative z-10 flex items-center justify-center">
                         立即探索平台
                         <svg class="w-4 h-4 ml-2 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
                     </span>
                     <div class="absolute inset-0 bg-white opacity-0 group-hover:opacity-20 transition-opacity"></div>
-                </a>
+                </button>
+                <script>
+                  function handleExploreClick() {
+                    // 清除localStorage中的访问记录，这样用户下次访问时还能看到landing.html页面
+                    localStorage.removeItem('hasVisitedBefore');
+                    // 跳转到React应用的首页
+                    window.location.href = '/index.html';
+                  }
+                </script>
                 <a href="#culture" class="px-8 py-4 rounded-full border border-white/20 hover:border-white/50 hover:bg-white/5 transition-all text-gray-300 hover:text-white">
                     了解企业使命
                 </a>
