Fix Vercel deployment error by removing invalid route rule

--- a/public/landing.html
+++ b/public/landing.html
@@ -260,7 +260,7 @@
                     // 这样用户下次访问时不会被重复重定向到landing.html
                     localStorage.setItem('hasExplored', 'true');
                     // 跳转到React应用的首页
-                    window.location.href = '/?skip_landing=true';
+                    window.location.href = '/';
                   }
                 </script>
                 <a href="#culture" class="px-8 py-4 rounded-full border border-white/20 hover:border-white/50 hover:bg-white/5 transition-all text-gray-300 hover:text-white">
